tests/chapter_6/valid/extra_credit/goto_nested_label.c
int main(void) {
    goto labelB;

    labelA:
        labelB:
            return 5;
    return 0;
}