tests/chapter_6/invalid_lex/extra_credit/bad_label_2.c
int main(void) {
    goto a.b;
}